<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.android.mti.beeryouwant.FindYourBeerFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:gravity="center"
            android:text="@string/find_your_beer_text"
            android:textSize="@dimen/find_your_beer_text"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/find_your_beer_adv_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_row="1"
            android:text="@string/find_your_beer_adv_choice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="2"
            android:text="@string/find_your_beer_color"
            android:textSize="@dimen/find_your_beer_color" />

        <RadioGroup
            android:id="@+id/find_your_beer_radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_your_beer_radio_light" />

            <RadioButton
                android:id="@+id/radio_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_your_beer_radio_dark" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="4"
            android:paddingTop="10dp"
            android:text="@string/find_your_beer_bitter"
            android:textSize="@dimen/find_your_beer_color" />

        <RadioGroup
            android:id="@+id/find_your_beer_bitter_radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/bitter_radio_weak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitter_radio_weak" />

            <RadioButton
                android:id="@+id/bitter_radio_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitter_radio_normal" />

            <RadioButton
                android:id="@+id/bitter_radio_strong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitter_radio_strong" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="6"
            android:paddingTop="10dp"
            android:text="@string/find_your_beer_malt"
            android:textSize="@dimen/find_your_beer_color" />

        <RadioGroup
            android:id="@+id/find_your_beer_malt_radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="7"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/malt_radio_weak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malt_radio_weak" />

            <RadioButton
                android:id="@+id/malt_radio_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malt_radio_normal" />

            <RadioButton
                android:id="@+id/malt_radio_strong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malt_radio_strong" />
        </RadioGroup>

        <GridLayout
            android:id="@+id/adv_choice_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="8"
                android:paddingTop="10dp"
                android:text="@string/find_your_beer_alcohol"
                android:textSize="@dimen/find_your_beer_color" />

            <RadioGroup
                android:id="@+id/find_your_beer_alcohol_radio_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="9"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/alcohol_radio_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol_radio_low" />

                <RadioButton
                    android:id="@+id/alcohol_radio_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol_radio_normal" />

                <RadioButton
                    android:id="@+id/alcohol_radio_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol_radio_high" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="10"
                android:paddingTop="10dp"
                android:text="@string/find_your_beer_malt_wheat"
                android:textSize="@dimen/find_your_beer_color" />

            <RadioGroup
                android:id="@+id/find_your_beer_malt_wheat_radio_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="11"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/malt_wheat_radio_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/malt_wheat_radio_yes" />

                <RadioButton
                    android:id="@+id/malt_wheat_radio_not_necessarily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/malt_wheat_radio_not_necessarily" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="12"
                android:paddingTop="10dp"
                android:text="@string/find_your_beer_fermentation"
                android:textSize="@dimen/find_your_beer_color" />

            <RadioGroup
                android:id="@+id/find_your_beer_fermentation_radio_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="13"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fermentation_radio_upper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fermentation_radio_upper" />

                <RadioButton
                    android:id="@+id/fermentation_radio_lower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fermentation_radio_lower" />
            </RadioGroup>
        </GridLayout>

        <Button
            android:id="@+id/find_your_beer_button"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@color/welcome_button"
            android:text="@string/find_your_beer_button"
            android:textSize="30sp"
            android:textStyle="bold" />
    </GridLayout>
</ScrollView>