<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/top_welcome_text"
        android:textColor="#000"
        android:textSize="@dimen/welcome_text"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/welcome_text_hint"
        android:textSize="@dimen/welcome_text_hint" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3"
        android:background="@color/welcome_button"
        android:onClick="OnButtonClicked"
        android:text="@string/welcome_text_button"
        android:textSize="@dimen/welcome_text_hint"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/top_fragment_padding_top"
        android:text="@string/favorite_works"
        android:textSize="@dimen/welcome_text_hint"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/favorites_works"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="3"
        android:paddingTop="@dimen/top_fragment_padding_top" />

</LinearLayout>