<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.przemek.beeryouwantv2.ChosenStylesDetailActivity">

        <TextView
            android:id="@+id/chosen_style_detail_name"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/chosen_style_detail_name_mb"
            android:layout_row="0"
            android:text=""
            android:textColor="@color/chosen_style_detail_name_beers"
            android:textSize="@dimen/chosen_style_detail_name"
            android:textStyle="bold" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/chosen_style_detail_name_mb"
            android:layout_row="1"
            android:text="@string/chosen_style_detail_color"
            android:textColor="@color/chosen_style_detail_parameters"
            android:textSize="@dimen/chosen_style_detail_parameter" />

        <TextView
            android:id="@+id/chosen_style_detail_color"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_row="1"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/chosen_style_detail_parameter_database"
            android:textStyle="bold" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/chosen_style_detail_name_mb"
            android:layout_row="2"
            android:text="@string/chosen_style_detail_bitter"
            android:textColor="@color/chosen_style_detail_parameters"
            android:textSize="@dimen/chosen_style_detail_parameter" />

        <TextView
            android:id="@+id/chosen_style_detail_bitter"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_row="2"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/chosen_style_detail_parameter_database"
            android:textStyle="bold" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/chosen_style_detail_name_mb"
            android:layout_row="3"
            android:text="@string/chosen_style_detail_malt"
            android:textColor="@color/chosen_style_detail_parameters"
            android:textSize="@dimen/chosen_style_detail_parameter" />

        <TextView
            android:id="@+id/chosen_style_detail_malt"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_row="3"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/chosen_style_detail_parameter_database"
            android:textStyle="bold" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/chosen_style_detail_name_mb"
            android:layout_row="4"
            android:text="@string/chosen_style_detail_alcohol"
            android:textColor="@color/chosen_style_detail_parameters"
            android:textSize="@dimen/chosen_style_detail_parameter" />

        <TextView
            android:id="@+id/chosen_style_detail_alcohol"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_row="4"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/chosen_style_detail_parameter_database"
            android:textStyle="bold" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/chosen_style_detail_name_mb"
            android:layout_row="5"
            android:text="@string/chosen_style_detail_wheat_malt"
            android:textColor="@color/chosen_style_detail_parameters"
            android:textSize="@dimen/chosen_style_detail_parameter" />

        <TextView
            android:id="@+id/chosen_style_detail_wheat_malt"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_row="5"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/chosen_style_detail_parameter_database"
            android:textStyle="bold" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/chosen_style_detail_name_mb"
            android:layout_row="6"
            android:text="@string/chosen_style_detail_fermentation"
            android:textColor="@color/chosen_style_detail_parameters"
            android:textSize="@dimen/chosen_style_detail_parameter" />

        <TextView
            android:id="@+id/chosen_style_detail_fermentation"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_row="6"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/chosen_style_detail_parameter_database"
            android:textStyle="bold" />

        <TextView
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/chosen_style_detail_name_mb"
            android:layout_row="7"
            android:text="@string/chosen_style_detail_beers"
            android:textColor="@color/chosen_style_detail_name_beers"
            android:textSize="@dimen/chosen_style_detail_parameter_database"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/chosen_styles_list_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_view_height"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="8"
            android:fadeScrollbars="false"></ListView>

    </GridLayout>
</ScrollView>